UAT fixes
* Add source code editor to all RTEs
* Remove mandatory flag on non-mandatory content
* Add category header and adjust text on ScienceCategoryPage
* Add clearfix to fix issue with overlapping content
* Restore iFrame page header
* Remove bold on hover
* Update styling of lightbox

--- a/src/JNCC.PublicWebsite/wwwroot/css/app.css
+++ b/src/JNCC.PublicWebsite/wwwroot/css/app.css
@@ -3310,7 +3310,7 @@ a.news-header,
 		text-decoration: none;
 	}
 
-	.alert-container a:hover,
+/*	.alert-container a:hover,
 	.alert-container a:focus,
 	.articles-section a:hover,
 	.articles-section a:focus,
@@ -3329,7 +3329,7 @@ a.news-header,
 	.text-block a:hover,
 	.text-block a:focus {
 		font-weight: bold;
-	}
+	}*/
 	
 a img {
 	border: 0;
@@ -8198,7 +8198,7 @@ a:hover > .label {
 .aside-nav a:hover,
 #sidebar p a:hover {
 	color: #1C4D19;
-	font-weight: bold;
+/*	font-weight: bold;*/
 }
 
 .aside-nav li {
@@ -8260,11 +8260,11 @@ a:hover > .label {
 	text-decoration: underline;
 }
 
-#content a:hover,
+/*#content a:hover,
 #content a:focus
 {
 	font-weight: bold;
-}
+}*/
 
 #content a:hover p,
 #content a:focus p {
@@ -9229,10 +9229,10 @@ header#header .row.expanded span.iframe-header-toggle-on > a::after {
 	text-decoration: underline;
 }
 
-#footer a:hover,
+/*#footer a:hover,
 #footer a:focus { 
 	font-weight:bold;
-}
+}*/
 
 #footer h2,
 #footer .landing-page .featured-quote p,
@@ -12225,13 +12225,13 @@ img.float-right,
 		height: 2rem;
 	}
 
-	header#header .row.expanded span.iframe-header-toggle > a::after {
+/*	header#header .row.expanded span.iframe-header-toggle > a::after {
 		top: 69%;
 	}
 
 	header#header .row.expanded span.iframe-header-toggle-on > a::after {
 		top: 58%;
-	}
+	}*/
 
 	.social-media {
 		-webkit-box-pack: start;
@@ -15519,12 +15519,13 @@ img.float-right, .float-right img {
 	width: 100%;
 	height: 100%;
 	overflow: auto;
+	background: rgba(255, 255, 255, .5);
 }
 
 /* Modal Content */
 .modal-content {
 	position: relative;
-	background-color: #fefefe;
+	background-color: transparent;
 	margin: auto;
 	padding: 0;
 	width: 90%;
@@ -15543,13 +15544,17 @@ img.float-right, .float-right img {
 
 	.close:hover,
 	.close:focus {
-		color: #999;
+		color: #555;
 		text-decoration: none;
 		cursor: pointer;
 	}
 
 .mySlides {
 	display: none;
+}
+
+.mySlides img {
+	object-fit: contain;
 }
 
 .cursor {
@@ -15565,7 +15570,7 @@ img.float-right, .float-right img {
 	width: auto;
 	padding: 16px;
 	margin-top: -50px;
-	color: white;
+	color: black;
 	font-weight: bold;
 	font-size: 20px;
 	transition: 0.6s ease;
@@ -15573,6 +15578,11 @@ img.float-right, .float-right img {
 	user-select: none;
 	-webkit-user-select: none;
 	/*background-color: black;*/
+	text-shadow:
+		1px 1px 0 #FFFFFF55,
+		-1px 1px 0 #FFFFFF55,
+		-1px -1px 0 #FFFFFF55,
+		1px -1px 0 #FFFFFF55;
 }
 
 /* Position the "next button" to the right */
@@ -15581,10 +15591,9 @@ img.float-right, .float-right img {
 	border-radius: 3px 0 0 3px;
 }
 
-	/* On hover, add a black background color with a little bit see-through */
 	.prev:hover,
 	.next:hover {
-		background-color: rgba(0, 0, 0, 0.8);
+		color: #555;
 	}
 
 /* Number text (1/3 etc) */
